[refactor] Change to "Stream.toList()" method instead of "collectors"